--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<meta name="theme-color" content="#F08829"/>
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/images/apple-touch-icon.png" />
 		<link rel="manifest" crossorigin="use-credentials" href="%sveltekit.assets%/manifest.json" />
+		<link href='https://fonts.googleapis.com/css?family=Libre Barcode 128' rel='stylesheet'>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
